--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav></nav>
     <main>
         <h1>Título Sinistro</h1>
-        <p>Texto <b>assombroso</b> muito <i>aterrozante</i>.</p>
+        <p>Texto <b>assombroso</b> muito <i>aterrorizante</i>.</p>
         <br>
         <ol>
             <li>Lugares onde você pode me encontrar
